<?xml version="1.0"?>
<!--
    Licensed to the Apache Software Foundation (ASF) under one or more
    contributor license agreements.  See the NOTICE file distributed with
    this work for additional information regarding copyright ownership.
    The ASF licenses this file to You under the Apache License, Version 2.0
    (the "License"); you may not use this file except in compliance with
    the License.  You may obtain a copy of the License at

    http://www.apache.org/licenses/LICENSE-2.0

    Unless required by applicable law or agreed to in writing, software
    distributed under the License is distributed on an "AS IS" BASIS,
    WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
    See the License for the specific language governing permissions and
    limitations under the License.
-->
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <groupId>org.apache.camel</groupId>
  <artifactId>camel-idea-plugin</artifactId>
  <version>0.1.8-SNAPSHOT</version>
  <name>Apache Camel IDEA Plugin</name>

  <description>Plugin for Intellij IDEA to provide a set of small Apache Camel related capabilities to IDEA editor.
  </description>

  <properties>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <maven.compiler.target>1.8</maven.compiler.target>
    <maven.compiler.source>1.8</maven.compiler.source>
    <maven.checkstyle.plugin.version>2.17</maven.checkstyle.plugin.version>
    <maven.checkstyle.version>6.17</maven.checkstyle.version>

    <idea.version>2016.3.2</idea.version>
    <camel.version>2.19.0-SNAPSHOT</camel.version>
    <snakeyaml.version>1.6</snakeyaml.version>
    <junit.version>4.12</junit.version>

    <ij.plugin>true</ij.plugin>
  </properties>

  <scm>
    <connection>scm:git:git://github.com/davsclaus/camel-idea-plugin.git</connection>
    <developerConnection>scm:git:git@github.com:davsclaus/camel-idea-plugin.git</developerConnection>
    <url>davsclaus/camel-idea-plugin.git</url>
    <tag>0.1.8-SNAPSHOT</tag>
  </scm>

  <!-- TODO: until we use a released version of camel-catalog -->
  <repositories>
    <repository>
      <id>apache.snapshots</id>
      <url>http://repository.apache.org/snapshots/</url>
      <name>Apache Snapshot Repo</name>
      <snapshots>
        <enabled>true</enabled>
      </snapshots>
      <releases>
        <enabled>false</enabled>
      </releases>
    </repository>
  </repositories>

  <pluginRepositories>
    <pluginRepository>
      <id>apache.snapshots</id>
      <url>http://repository.apache.org/snapshots/</url>
      <snapshots>
        <enabled>true</enabled>
      </snapshots>
      <releases>
        <enabled>false</enabled>
      </releases>
    </pluginRepository>
  </pluginRepositories>

  <dependencies>
    <!-- Camel dependencies -->
    <dependency>
      <groupId>org.apache.camel</groupId>
      <artifactId>camel-catalog</artifactId>
      <version>${camel.version}</version>
      <scope>compile</scope>
    </dependency>

    <!-- IntelliJ Dependencies -->
    <dependency>
      <groupId>com.intellij</groupId>
      <artifactId>openapi</artifactId>
      <version>${idea.version}</version>
      <scope>compile</scope>
    </dependency>
    <dependency>
      <groupId>com.intellij</groupId>
      <artifactId>idea</artifactId>
      <version>${idea.version}</version>
      <scope>provided</scope>
    </dependency>

    <dependency>
      <groupId>com.intellij</groupId>
      <artifactId>extensions</artifactId>
      <version>${idea.version}</version>
      <scope>provided</scope>
    </dependency>
    <dependency>
      <groupId>com.intellij</groupId>
      <artifactId>annotations</artifactId>
      <version>${idea.version}</version>
      <scope>provided</scope>
    </dependency>
    <dependency>
      <groupId>com.intellij</groupId>
      <artifactId>util</artifactId>
      <version>${idea.version}</version>
      <scope>provided</scope>
    </dependency>
    <dependency>
      <groupId>org.yaml</groupId>
      <artifactId>snakeyaml</artifactId>
      <version>${snakeyaml.version}</version>
    </dependency>

    <!-- Test -->
    <dependency>
      <groupId>com.intellij</groupId>
      <artifactId>idea_rt</artifactId>
      <version>${idea.version}</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>com.intellij</groupId>
      <artifactId>trove4j</artifactId>
      <version>${idea.version}</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>com.intellij</groupId>
      <artifactId>log4j</artifactId>
      <version>${idea.version}</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>com.intellij</groupId>
      <artifactId>boot</artifactId>
      <version>${idea.version}</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>com.intellij</groupId>
      <artifactId>bootstrap</artifactId>
      <version>${idea.version}</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>com.intellij</groupId>
      <artifactId>jdom</artifactId>
      <version>${idea.version}</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>com.intellij</groupId>
      <artifactId>kotlin-runtime</artifactId>
      <version>${idea.version}</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>com.intellij</groupId>
      <artifactId>picocontainer</artifactId>
      <version>${idea.version}</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>com.intellij</groupId>
      <artifactId>resources_en</artifactId>
      <version>${idea.version}</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>com.intellij</groupId>
      <artifactId>resources</artifactId>
      <version>${idea.version}</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>com.intellij</groupId>
      <artifactId>jna-platform</artifactId>
      <version>${idea.version}</version>
      <scope>test</scope>
    </dependency><dependency>
      <groupId>com.intellij</groupId>
      <artifactId>jna</artifactId>
      <version>${idea.version}</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>com.intellij</groupId>
      <artifactId>httpclient-4.5.2</artifactId>
      <version>${idea.version}</version>
      <scope>test</scope>
    </dependency><dependency>
      <groupId>com.intellij</groupId>
      <artifactId>commons-logging-1.2</artifactId>
      <version>${idea.version}</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>com.intellij</groupId>
      <artifactId>jps-builders</artifactId>
      <version>${idea.version}</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>com.intellij</groupId>
      <artifactId>jps-model</artifactId>
      <version>${idea.version}</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>com.intellij</groupId>
      <artifactId>netty-all-4.1.5.Final</artifactId>
      <version>${idea.version}</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>com.intellij</groupId>
      <artifactId>guava-19.0</artifactId>
      <version>${idea.version}</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>com.intellij</groupId>
      <artifactId>forms_rt</artifactId>
      <version>${idea.version}</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>com.intellij</groupId>
      <artifactId>automaton</artifactId>
      <version>${idea.version}</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>com.intellij</groupId>
      <artifactId>cglib-nodep-3.2.4</artifactId>
      <version>${idea.version}</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>com.intellij</groupId>
      <artifactId>oromatcher</artifactId>
      <version>${idea.version}</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>com.intellij</groupId>
      <artifactId>rngom-20051226-patched</artifactId>
      <version>${idea.version}</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>com.intellij</groupId>
      <artifactId>snappy-in-java-0.5.1</artifactId>
      <version>${idea.version}</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>com.intellij</groupId>
      <artifactId>nanoxml-2.2.3</artifactId>
      <version>${idea.version}</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>com.intellij</groupId>
      <artifactId>util</artifactId>
      <version>${idea.version}</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>com.intellij</groupId>
      <artifactId>jing</artifactId>
      <version>${idea.version}</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>com.intellij</groupId>
      <artifactId>proxy-vole_20131209</artifactId>
      <version>${idea.version}</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>com.intellij</groupId>
      <artifactId>protobuf-2.5.0</artifactId>
      <version>${idea.version}</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>com.intellij</groupId>
      <artifactId>asm-all</artifactId>
      <version>${idea.version}</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>com.intellij</groupId>
      <artifactId>icons</artifactId>
      <version>${idea.version}</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>com.intellij</groupId>
      <artifactId>sanselan-0.98-snapshot</artifactId>
      <version>${idea.version}</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>junit</groupId>
      <artifactId>junit</artifactId>
      <version>${junit.version}</version>
      <scope>test</scope>
    </dependency>
  </dependencies>

  <build>
    <resources>
      <resource>
        <directory>src/main/resources/</directory>
        <includes>
          <include>META-INF/plugin.xml</include>
          <include>icons/</include>
        </includes>
      </resource>
    </resources>

    <plugins>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-failsafe-plugin</artifactId>
        <version>2.19.1</version>
        <executions>
          <execution>
            <goals>
              <goal>integration-test</goal>
              <goal>verify</goal>
            </goals>
            <configuration>
              <useManifestOnlyJar>false</useManifestOnlyJar>
              <useSystemClassLoader>true</useSystemClassLoader>
              <additionalClasspathElements>
                <additionalClasspathElement>${java.home}/../lib/tools.jar</additionalClasspathElement>
              </additionalClasspathElements>
              <argLine>-ea -Xbootclasspath/p:../out/classes/production/boot -XX:+HeapDumpOnOutOfMemoryError -Xmx512m -XX:MaxPermSize=320m</argLine>
              <systemPropertyVariables>
                <java.net.preferIPv4Stack>true</java.net.preferIPv4Stack>
                <idea.system.path>../test-system</idea.system.path>
                <idea.home.path>../</idea.home.path>
                <idea.config.path>../test-config</idea.config.path>
                <idea.platform.prefix>Idea</idea.platform.prefix>
                <idea.test.group>ALL_EXCLUDE_DEFINED</idea.test.group>
                <idea.load.plugins>true</idea.load.plugins>
                <idea.load.plugins.id>com.intellij, org.apache.camel</idea.load.plugins.id>

              </systemPropertyVariables>
            </configuration>
          </execution>
        </executions>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-checkstyle-plugin</artifactId>
        <version>${maven.checkstyle.plugin.version}</version>
        <dependencies>
          <dependency>
            <groupId>com.puppycrawl.tools</groupId>
            <artifactId>checkstyle</artifactId>
            <version>${maven.checkstyle.version}</version>
          </dependency>
        </dependencies>
        <executions>
          <execution>
            <id>validate</id>
            <phase>validate</phase>
            <configuration>
              <includeResources>false</includeResources>
              <configLocation>buildingtools/camel-checkstyle.xml</configLocation>
              <consoleOutput>true</consoleOutput>
              <failsOnError>true</failsOnError>
              <linkXRef>false</linkXRef>
              <suppressionsLocation>buildingtools/camel-checkstyle-suppressions.xml</suppressionsLocation>
              <encoding>UTF-8</encoding>
              <sourceDirectory>${basedir}/src</sourceDirectory>
            </configuration>
            <goals>
              <goal>checkstyle</goal>
            </goals>
          </execution>
        </executions>
      </plugin>

      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-release-plugin</artifactId>
        <configuration>
          <autoVersionSubmodules>true</autoVersionSubmodules>
          <tagNameFormat>@{project.version}</tagNameFormat>
        </configuration>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-assembly-plugin</artifactId>
        <configuration>
          <appendAssemblyId>false</appendAssemblyId>
          <descriptors>
            <descriptor>${project.basedir}/src/main/resources/assembly/camel-intellij-plugin-assembly.xml</descriptor>
          </descriptors>
        </configuration>
        <executions>
          <execution>
            <id>distribution-package</id>
            <phase>package</phase>
            <goals>
              <goal>single</goal>
            </goals>
          </execution>
        </executions>
      </plugin>
    </plugins>
  </build>

</project>